--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # ClickHouse - stores traces, logs, and metrics
   clickhouse:
@@ -13,9 +11,9 @@ services:
       - clickhouse_logs:/var/log/clickhouse-server
       - ./configs/clickhouse-config.xml:/etc/clickhouse-server/config.d/custom.xml
     environment:
-      - CLICKHOUSE_DB=otel
-      - CLICKHOUSE_USER=default
-      - CLICKHOUSE_PASSWORD=${env:CLICKHOUSE_PASSWORD}
+      - CLICKHOUSE_DB=${CLICKHOUSE_DB:-otel}
+      - CLICKHOUSE_USER=${CLICKHOUSE_USERNAME:-default}
+      - CLICKHOUSE_PASSWORD=${CLICKHOUSE_PASSWORD:-}
     ulimits:
       nofile:
         soft: 262144
@@ -27,8 +25,9 @@ services:
       retries: 5
 
   # OTLP Collector - receives traces and forwards to ClickHouse
+  # Using contrib image which includes ClickHouse exporter
   otel-collector:
-    image: otel/opentelemetry-collector:latest
+    image: otel/opentelemetry-collector-contrib:latest
     container_name: otel-collector
     command: ["--config=/etc/otel-collector-config.yaml"]
     volumes:
@@ -40,12 +39,12 @@ services:
       - CLICKHOUSE_HOST=clickhouse
       - CLICKHOUSE_DATABASE=otel
       - CLICKHOUSE_USERNAME=default
-      - CLICKHOUSE_PASSWORD=
+      - CLICKHOUSE_PASSWORD=${CLICKHOUSE_PASSWORD:-default}${CLICKHOUSE_PASSWORD:-}
     depends_on:
       clickhouse:
         condition: service_healthy
     healthcheck:
-      test: ["CMD", "wget", "--spider", "-q", "http://localhost:13133"]
+      test: ["CMD", "wget", "--spider", "-q", "http://127.0.0.1:13133"]
       interval: 10s
       timeout: 5s
       retries: 5
