--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,9 +11,9 @@ services:
       - clickhouse_logs:/var/log/clickhouse-server
       - ./configs/clickhouse-config.xml:/etc/clickhouse-server/config.d/custom.xml
     environment:
-      - CLICKHOUSE_DB=${CLICKHOUSE_DB:-otel}
-      - CLICKHOUSE_USER=${CLICKHOUSE_USERNAME:-default}
-      - CLICKHOUSE_PASSWORD=${CLICKHOUSE_PASSWORD:-}
+      - CLICKHOUSE_DB=default
+      - CLICKHOUSE_USER=otel
+      - CLICKHOUSE_PASSWORD=otelpass
     ulimits:
       nofile:
         soft: 262144
@@ -37,9 +37,9 @@ services:
       - "4318:4318"   # OTLP HTTP receiver
     environment:
       - CLICKHOUSE_HOST=clickhouse
-      - CLICKHOUSE_DATABASE=otel
-      - CLICKHOUSE_USERNAME=default
-      - CLICKHOUSE_PASSWORD=${CLICKHOUSE_PASSWORD:-default}${CLICKHOUSE_PASSWORD:-}
+      - CLICKHOUSE_DATABASE=default
+      - CLICKHOUSE_USERNAME=otel
+      - CLICKHOUSE_PASSWORD=otelpass
     depends_on:
       clickhouse:
         condition: service_healthy
